--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,6 +6,13 @@
     "./client":"./src/index.ts"
   },
   "private": true,
+  "scripts": {
+    "seed": "bun run prisma/seed.ts",
+    "db:seed": "prisma db seed"
+  },
+  "prisma": {
+    "seed": "bun run prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
