--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "validator",
+  "name": "common",
   "module": "index.ts",
   "type": "module",
   "private": true,
@@ -8,8 +8,5 @@
   },
   "peerDependencies": {
     "typescript": "^5"
-  },
-  "dependencies": {
-    "@solana/web3.js": "^1.98.2"
   }
 }
