--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@clerk/nextjs": "^6.24.0",
     "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.2",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
@@ -25,6 +27,7 @@
     "next-themes": "^0.4.6",
     "qss": "^3.0.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1"
